// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimCard component matches the snapshot of a two line claim 1`] = `
<Block
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": "100%",
        "justifyContent": "space-between",
        "marginBottom": "1%",
        "paddingVertical": "5%",
      },
      Object {},
    ]
  }
>
  <Component
    onTouchEnd={[Function]}
    style={
      Object {
        "flex": 0.2,
        "paddingLeft": "5%",
      }
    }
  />
  <Component
    onTouchEnd={[Function]}
    style={
      Object {
        "flex": 0.7,
        "flexGrow": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <ClaimCard
      containerStyle={Object {}}
      key="givenName"
      primaryText="Test"
      primaryTextStyle={Object {}}
      rightIcon={null}
      secondaryText="Given Name"
      secondaryTextStyle={Object {}}
    />
    <ClaimCard
      containerStyle={
        Object {
          "marginBottom": 0,
        }
      }
      key="familyName"
      primaryText="Running"
      primaryTextStyle={Object {}}
      rightIcon={null}
      secondaryText="Family Name"
      secondaryTextStyle={Object {}}
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "flex": 0.1,
        },
        undefined,
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
    />
  </Component>
</Block>
`;

exports[`ClaimCard component matches the snapshot on render 1`] = `
<Block
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "white",
        "flexDirection": "row",
        "height": "100%",
        "justifyContent": "space-between",
        "marginBottom": "1%",
        "paddingVertical": "5%",
      },
      Object {},
    ]
  }
>
  <Component
    onTouchEnd={[Function]}
    style={
      Object {
        "flex": 0.2,
        "paddingLeft": "5%",
      }
    }
  />
  <Component
    onTouchEnd={[Function]}
    style={
      Object {
        "flex": 0.7,
        "flexGrow": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <ClaimCard
      containerStyle={
        Object {
          "marginBottom": 0,
        }
      }
      key="familyName"
      primaryText="Running"
      primaryTextStyle={Object {}}
      rightIcon={null}
      secondaryText="Family Name"
      secondaryTextStyle={Object {}}
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "flex": 0.1,
        },
        undefined,
      ]
    }
  >
    <TouchableOpacity
      activeOpacity={0.2}
    />
  </Component>
</Block>
`;
